--- a/src/app/html/header.html
+++ b/src/app/html/header.html
@@ -78,7 +78,7 @@
                data-ng-class="getMenuClass('/hyvaksy')"
                data-ng-bind="i18n.header.navigation.hyvaksy[lang]">
             </a>
-            <a
+            <a  data-ng-if="user.role === 'owner'"
                 href data-ui-sref="admin()"
                 data-ng-class="getMenuClass('/admin')"
                 data-ng-bind="i18n.header.navigation.admin[lang]">
