--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -29,17 +29,18 @@
 <div class="esitaytto-container px">
     <div class="row m-b px">
         <div class="col-xs-12">
-            <h3>{{i18n.content.esitayta.doihaku.title[lang]}}</h3>
+            <label for="doihaku" class="h3 text-dark">{{i18n.content.esitayta.doihaku.title[lang]}}</label>
             <p data-ng-bind="i18n.content.esitayta.doihaku.info[lang]"></p>
-            <!--      <div class="row">-->
-            <!--        <div class="col-xs-10">-->
             <div class="input-group">
-                <input type="text"
+                <input id="doihaku"
+                       name="doihaku"
+                       type="text"
                        data-ng-model="julkaisunhakudoi"
                        class="form-control"
                        placeholder='{{i18n.content.esitayta.doihaku.tunniste.tooltip[lang]}}'>
                 <span class="input-group-btn">
-              <button class="btn btn-primary"
+              <button type="submit"
+                      class="btn btn-primary"
                       data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
                       data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
               </button>
@@ -50,16 +51,21 @@
 
     <div class="row px">
         <div class="col-xs-12">
-            <h3>{{i18n.content.esitayta.etsijulkaisu.title[lang]}}</h3>
+            <label id="julkaisunnimihaku"
+                   class="h3 text-dark">{{i18n.content.esitayta.etsijulkaisu.title[lang]}}
+            </label>
             <p data-ng-bind="i18n.content.esitayta.etsijulkaisu.info[lang]"></p>
             <div class="form-group">
-                <input type="text" class="form-control" data-ng-model="julkaisunhakutekija"
+                <input aria-label="tekijannimi"
+                       type="text" class="form-control"
+                       data-ng-model="julkaisunhakutekija"
                        placeholder="{{i18n.content.esitayta.etsijulkaisu.tekija.tooltip[lang]}}">
             </div>
-
             <div class="form-group">
-                <ui-select data-ng-model="julkaisu.selected"
-                           theme="bootstrap" uis-open-close="onOpenClose(isOpen, $select.selected.title)">
+                <ui-select
+                        aria-labelledby="julkaisunnimihaku"
+                        data-ng-model="julkaisu.selected"
+                        theme="bootstrap" uis-open-close="onOpenClose(isOpen, $select.selected.title)">
                     <ui-select-match class="ui-select-match"
                                      placeholder="{{i18n.content.esitayta.etsijulkaisu.picktip[lang]}}">
                         {{$select.selected.title}}
@@ -82,7 +88,8 @@
             <i class="fa fa-spinner fa-spin fa-3x pull-right" data-ng-show="virtaLataa"></i>
         </div>
         <div class="col-xs-6">
-            <button class="btn btn-primary  pull-right"
+            <button type="button"
+                    class="btn btn-primary  pull-right"
                     data-ng-click="useJulkaisunnimi(julkaisu.selected.source, julkaisu.selected.identifier)"
                     data-ng-bind="i18n.content.esitayta.hae[lang]">
             </button>
