Add dynamic page title.

--- a/src/app/html/footer.html
+++ b/src/app/html/footer.html
@@ -17,6 +17,6 @@
     -->
   </div>
   <div class="col-xs-4 text-right">
-    <img src="img/cscnega.png" alt="{{i18n.header.logotext[lang]}" class="pull-right img-responsive" style="max-height:50px">
+    <img src="img/cscnega.png" alt="CSC logo" class="pull-right img-responsive" style="max-height:50px">
   </div>
 </div>
