--- a/src/app/html/admin/haku.html
+++ b/src/app/html/admin/haku.html
@@ -4,66 +4,79 @@
     <div class="px mb-l" data-ng-if="showEditDialog">
 
         <form name="personForm" novalidate>
-          <span class="btn btn-default pull-right "
+          <button class="btn btn-default pull-right "
                 data-ng-click="closeForm()"
                 title="i18n.admin.content.form.sulje[lang]">
                   {{i18n.admin.content.form.sulje[lang]}}
               <i class="fa fa-close fa-lg pl"></i>
-          </span>
+          </button>
 
         <h4 data-ng-if="selectedPerson.id">
             {{i18n.admin.content.form.muokkaa[lang]}} {{selectedPerson.etunimi}} {{selectedPerson.sukunimi}}</h4>
         <h4 data-ng-if="!selectedPerson.id" data-ng-bind="i18n.admin.content.form.lisaa[lang]"></h4>
 
-        <div class="row form-group" id="firstnameGroup">
-            <div class="col-xs-12 ">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.etunimi[lang]"></label>
-                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
-                <input type="text" class="form-control" name="firstname"
-                       data-ng-model="selectedPerson.etunimi" required>
+            <div class="row form-group" id="firstnameGroup">
+                <div class="col-xs-12 ">
+                    <label for="fname" class="control-label"
+                           data-ng-bind="i18n.admin.content.form.etunimi[lang]"></label>
+                    <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
+                    <input id="fname"
+                           type="text"
+                           class="form-control"
+                           name="firstname"
+                           data-ng-model="selectedPerson.etunimi" required>
+                </div>
             </div>
-        </div>
-        <div class="row form-group" id="lastnameGroup">
-            <div class="col-xs-12">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.sukunimi[lang]"></label>
-                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
-                <input type="text" class="form-control" name="lastname"
-                       data-ng-model="selectedPerson.sukunimi" required>
+            <div class="row form-group" id="lastnameGroup">
+                <div class="col-xs-12">
+                    <label for="lname" class="control-label"
+                           data-ng-bind="i18n.admin.content.form.sukunimi[lang]"></label>
+                    <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
+                    <input id="lname"
+                           type="text"
+                           class="form-control"
+                           name="lastname"
+                           data-ng-model="selectedPerson.sukunimi" required>
+                </div>
             </div>
-        </div>
-        <div class="row form-group" id="hrnumberGroup">
-            <div class="col-xs-12">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.tunniste[lang]"></label>
-                <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
-                <input type="text" class="form-control" name="hrnumber"
-                       data-ng-model="selectedPerson.hrnumero"
-                       data-ng-disabled="selectedPerson.id"
-                       required>
+            <div class="row form-group" id="hrnumberGroup">
+                <div class="col-xs-12">
+                    <label for="identifier" class="control-label"
+                           data-ng-bind="i18n.admin.content.form.tunniste[lang]"></label>
+                    <i class="fa fa-asterisk required-star" aria-hidden="true"></i>
+                    <input id="identifier"
+                           type="text" class="form-control" name="hrnumber"
+                           data-ng-model="selectedPerson.hrnumero"
+                           data-ng-disabled="selectedPerson.id"
+                           required>
+                </div>
             </div>
-        </div>
         <div class="row form-group">
             <div class="col-xs-12">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.email[lang]"></label>
-                <input type="text" class="form-control" name="email"
+                <label for="email" class="control-label" data-ng-bind="i18n.admin.content.form.email[lang]"></label>
+                <input id="email"
+                        type="email" class="form-control" name="email"
                        data-ng-model="selectedPerson.email">
             </div>
         </div>
         <div class="row form-group" id="orcidGroup">
             <div class="col-xs-12"
                  value="selectedPerson.orcid">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.orcid[lang]"></label>
-                <input type="text" class="form-control" name="orcid"
+                <label for="orcid" class="control-label" data-ng-bind="i18n.admin.content.form.orcid[lang]"></label>
+                <input id="orcid"
+                       type="text" class="form-control" name="orcid"
                        data-ng-model="selectedPerson.orcid"
-                       orcid-directive>
+                       data-orcid-directive>
             </div>
         </div>
         <div class="row form-group"
              data-ng-if="isFieldVisible('alayksikko')">
             <div data-ng-if="selectedPerson.alayksikko[0]" class="col-xs-12">
-                <label class="control-label" data-ng-bind="i18n.admin.content.form.alayksikko.label[lang]"></label>
+                <label for="unit" class="control-label" data-ng-bind="i18n.admin.content.form.alayksikko.label[lang]"></label>
                 <div data-ng-repeat="a in selectedPerson.alayksikko track by $index" class="row mb-x">
                     <div class="col-xs-11">
                         <input disabled
+                               id="unit"
                                type="text" class="form-control"
                                data-ng-model="a" name="alayksikko">
                     </div>
@@ -85,20 +98,27 @@
             </div>
 
             <div class="col-xs-12 col-sm-5">
+                <label id="valitsevuosi">{{i18n.admin.content.form.alayksikko.placeholder.vuosi[lang]}}</label>
                 <ui-select data-ng-model="alayksikkovuosi.selected"
-                           theme="bootstrap">
+                           aria-labelledby="valitsevuosi"
+                           theme="bootstrap"
+                           role="listbox"
+                            aria-labelled="addunits">
                     <ui-select-match class="ui-select-match"
                                      data-ng-value="alayksikkovuosi.selected"
                                      placeholder="{{i18n.admin.content.form.alayksikko.placeholder.vuosi[lang]}}">
                         {{ $select.selected.label }}
                     </ui-select-match>
-                    <ui-select-choices repeat="ala in alayksikkovuodet">
+                    <ui-select-choices role="option" repeat="ala in alayksikkovuodet">
                         {{ala.label}}
                     </ui-select-choices>
                 </ui-select>
             </div>
             <div class="col-xs-12 col-sm-7">
+                <label id="valitsealayksikko">{{i18n.admin.content.form.alayksikko.placeholder.lisaa[lang]}}</label>
                 <ui-select data-ng-model="alayksikko.selected"
+                           aria-labelledby="valitsealayksikko"
+                           role="listbox"
                            on-select="addAlayksikko($select.selected.arvo)"
                            theme="bootstrap"
                            class="dropdown-height-300">
@@ -106,7 +126,7 @@
                                      placeholder="{{i18n.admin.content.form.alayksikko.placeholder.lisaa[lang]}}">
                         {{i18n.admin.content.form.alayksikko.placeholder.lisaa[lang]}}
                     </ui-select-match>
-                    <ui-select-choices repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
+                    <ui-select-choices role="option" repeat="o in getAlayksikkoData(alayksikkovuosi.selected) | filter: $select.search">
                         {{ o.arvo}} {{o.selite}}
                     </ui-select-choices>
                 </ui-select>
@@ -122,7 +142,8 @@
                 </button>
             </div>
             <div data-ng-if="selectedPerson.id" class="col-xs-4">
-                <button class="btn btn-danger btn-block btn-lg"
+                <button type="reset"
+                        class="btn btn-danger btn-block btn-lg"
                         data-ng-click="removePerson()"
                         data-ng-bind="i18n.admin.content.form.poista[lang]">
                 </button>
@@ -132,19 +153,20 @@
     </div>
 
     <div data-ng-hide="showEditDialog">
-    <div data-ng-if="showList" style="margin: 30px 15px;">
-        <span class="btn btn-default pull-right "
-              data-ng-click="closeList()"
-              title="{{i18n.admin.content.form.sulje[lang]}}">
+        <div data-ng-if="showList" style="margin: 30px 15px;">
+            <button type="button"
+                    class="btn btn-default pull-right "
+                    data-ng-click="closeList()"
+                    title="{{i18n.admin.content.form.sulje[lang]}}">
                 {{i18n.admin.content.form.sulje[lang]}}
-              <i class="fa fa-close fa-lg pl"></i>
-          </span>
-        <person-publication-list-directive
-                                           lang="lang"
-                                           person="personToShow"
-                                           publication-list="publicationList">
-        </person-publication-list-directive>
-    </div>
+                <i class="fa fa-close fa-lg pl"></i>
+            </button>
+            <person-publication-list-directive
+                    lang="lang"
+                    person="personToShow"
+                    publication-list="publicationList">
+            </person-publication-list-directive>
+        </div>
 
     <div class="px">
         <div class="row m-b m-t">
@@ -153,7 +175,8 @@
                     <span class="input-group-addon bg-primary cursor-pointer border-primary">
                         <i class="fa fa-search text-white"></i>
                     </span>
-                    <input type="text" class="form-control"
+                    <input aria-label="search from persons"
+                            type="search" class="form-control"
                            data-ng-model="search"
                            placeholder="{{i18n.admin.content.haku[lang]}}"/>
                 </div>
