Improve styles and labels in organisations authors section.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -97,7 +97,7 @@
       <label for="julkaisunnimi" class="control-label"
              data-ng-bind="i18n.content.form.julkaisunnimi[lang]">
       </label>
-      <i data-ng-if="isFieldRequired('julkaisunnimi')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
+      <i title="pakollinen tieto" data-ng-if="isFieldRequired('julkaisunnimi')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
       <i class="fa fa-info-circle justus-info cursor-pointer"
          data-popover-trigger="'outsideClick'"
          data-popover-is-open="popoverIsOpen"
@@ -454,7 +454,6 @@
                        data-ng-model="justus.organisaatiotekija[$index].orcid"
                        placeholder="{{i18n.content.form.organisaatiotekija.orcid.picktip[lang]}}"
                        data-orcid-directive>
-                <span class="fa fa-times form-control-feedback" aria-hidden="true"></span>
                 <span data-ng-show="orcidError">No data found for this orcid</span>
               </div>
               <!-- Kenttä hr numero, currently visible only for Luonnonvarakeskus -->
@@ -493,7 +492,7 @@
                   <div data-ng-repeat="ota in justus.organisaatiotekija[$index].alayksikko track by $index"
                        data-ng-init="pIx=$parent.$index">
                     <div class="row no-gutter">
-                      <div class="col-xs-11 col-sm-11" data-ng-hide="!ota"
+                      <div class="col-xs-10 col-sm-10" data-ng-hide="!ota"
                            validate-organisaatiotekijat-directive validate="validateState"
                            field="alayksikko" value="ota">
                         <input id="unitlist"
@@ -503,12 +502,12 @@
                                value=" {{ ota }}  {{ getSelite(user.alayksikot, ota) }}"
                                placeholder="{{ i18n.content.form.organisaatiotekija.alayksikko.picktip[lang] }}">
                       </div>
-                      <div class="col-xs-1 col-sm-1 ">
+                      <div class="col-xs-2 col-sm-2 ">
                         <button type="button"
-                                class="btn btn-primary pull-right"
+                                class="btn btn-danger pull-right"
                                 data-ng-click="poistaAlayksikko(pIx, $index)"
-                                title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}"
-                                data-ng-bind="i18n.content.form.organisaatiotekija.poista[lang]">
+                                title="{{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}">
+                          {{i18n.content.form.organisaatiotekija.poista.tooltip[lang]}}
                         </button>
                       </div>
                     </div>
@@ -518,7 +517,8 @@
                 <label class="control-label">Lisää alayksiköitä</label>
                 <div class="row form-group">
                   <div class="col-xs-12 col-sm-5">
-                    <ui-select aria-label="valitse vuosi"
+                    <label id="valitsevuosi">{{i18n.admin.content.form.alayksikko.placeholder.vuosi[lang]}}</label>
+                    <ui-select aria-label="valitsevuosi"
                                role="listbox"
                                data-ng-model="alayksikkovuosi.selected"
                                theme="bootstrap">
@@ -533,14 +533,14 @@
                     </ui-select>
                   </div>
                   <div class="col-xs-12 col-sm-7">
-                    <ui-select aria-labelledby="addunit"
+                    <label id="valitsealayksikko">{{i18n.admin.content.form.alayksikko.placeholder.lisaa[lang]}}</label>
+                    <ui-select aria-labelledby="valitsealayksikko"
                                role="listbox"
                                data-ng-model="alayksikko.selected"
                                on-select="useAlayksikko($index,$select.selected.arvo)"
                                theme="bootstrap"
                                class="dropdown-height-300">
                       <ui-select-match class="ui-select-match"
-                                       id="addunit"
                                        placeholder="Valitse alayksikkö">Valitse alayksikkö
 
                       </ui-select-match>
