Change doi identifier seach button style and text.

--- a/src/app/html/justus/esitayta.html
+++ b/src/app/html/justus/esitayta.html
@@ -27,25 +27,27 @@
 </div>
 
 <div class="esitaytto-container px">
-    <div class="row m-b px">
+    <div class="row px">
         <div class="col-xs-12">
             <label for="doihaku" class="h3 text-dark">{{i18n.content.esitayta.doihaku.title[lang]}}</label>
             <p data-ng-bind="i18n.content.esitayta.doihaku.info[lang]"></p>
-            <div class="input-group">
+            <div class="form-group">
                 <input id="doihaku"
                        name="doihaku"
                        type="text"
                        data-ng-model="julkaisunhakudoi"
                        class="form-control"
                        placeholder='{{i18n.content.esitayta.doihaku.tunniste.tooltip[lang]}}'>
-                <span class="input-group-btn">
-              <button type="submit"
-                      class="btn btn-primary"
-                      data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
-                      data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
-              </button>
-            </span>
             </div>
+        </div>
+    </div>
+    <div class="row px">
+        <div class="col-xs-12">
+        <button type="submit"
+                class="btn btn-primary pull-right"
+                data-ng-click="useJulkaisunnimi('CrossRef',julkaisunhakudoi)"
+                data-ng-bind="i18n.content.esitayta.doihaku.hae[lang]">
+        </button>
         </div>
     </div>
 
