--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -349,7 +349,7 @@
   <div class="row">
     <div class="col-md-3">
       <button
-              class="btn btn-lg btn-block btn-light"
+              class="btn btn-lg btn-block btn-info"
               type="submit"
               data-ng-click="useVaihe(3)">
         Palaa muokkaamaan
