--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -6,6 +6,10 @@
   margin-top: $padding-small-vertical;
 }
 
+.font-weight-light {
+  font-weight: lighter;
+}
+
 .font-weight-500 {
   font-weight: 500;
 }
