--- a/src/app/html/justus/julkaisunsyotto.html
+++ b/src/app/html/justus/julkaisunsyotto.html
@@ -388,7 +388,7 @@
 <div class="row">
     <div class="col-md-4">
         <button
-                class="btn btn-lg btn-block btn-light"
+                class="btn btn-lg btn-block btn-info"
                 type="submit"
                 data-ng-click="useVaihe(3)">
             Palaa edelliseen vaiheeseen
