--- a/src/app/html/index_part.html
+++ b/src/app/html/index_part.html
@@ -44,7 +44,7 @@
         <p data-ng-bind="i18n.etusivu.help.title[lang]" class="d-inline-block text-muted"></p>
         <span>
           <a href="https://wiki.eduuni.fi/display/CscJustus/Ohjeet" target="__blank">
-            <i class="fa fa-question-circle justus-info"></i> {{i18n.header.help[lang]}}
+            <i class="fa fa-external-link pl-x"></i> {{i18n.header.help[lang]}}
           </a>
         </span>
     </div>
